--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,5 +1,10 @@
 :host {
   mat-toolbar {
+    position: sticky;
+    position: -webkit-sticky; /* For macOS/iOS Safari */
+    top: 0;
+    z-index: 1000;
+
     mat-toolbar-row {
       display: flex;
       justify-content: space-between;
@@ -13,3 +18,4 @@
   }
 
 }
+
