add alert in case of http request failed and add warning dialog in case of delete action

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.green-snackbar {
+  --mdc-snackbar-container-color: #21f367;
+  --mat-mdc-snack-bar-button-color: #fff;
+  --mdc-snackbar-supporting-text-color: #fff;
+
+  button {
+    border: 1px solid #fff;
+  }
+}
+
+.error-alert {
+  --mdc-snackbar-container-color: #f32121;
+  --mat-mdc-snack-bar-button-color: #fff;
+  --mdc-snackbar-supporting-text-color: #fff;
+
+  button {
+    border: 1px solid #fff;
+  }
+}
+
+
+
+
