--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.green-snackbar {
+.success-snackbar {
   --mdc-snackbar-container-color: #21f367;
   --mat-mdc-snack-bar-button-color: #fff;
   --mdc-snackbar-supporting-text-color: #fff;
